# betterbase-inference

./: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  justfile
src/: config.rs  main.rs  protocol.rs
src/auth/: devmode.rs  errors.rs  jwks.rs  jwt.rs  mod.rs
src/backend/: mod.rs  tinfoil.rs
src/server/: handlers.rs  logging.rs  middleware.rs  mod.rs  proxy.rs  ratelimit.rs
